Improved documentation in Data processing notebooks

--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -9,7 +9,8 @@
     "===\n",
     "\n",
     "Prepare data for the analysis. The raw data is downloaded from the FAIR Universe HiggsML challenge repository. Use the HiggsML package to download and process the dataset, followed by selections and saving to local cache.\n",
-    "\n"
+    "\n",
+    "NB: This notebook is only to be run once to get the FAIR Universe dataset into `.root` ntuples. The rest of the workflow is independent of this.\n"
    ]
   },
   {
