--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -8,8 +8,9 @@
     "Data Processing Notebook\n",
     "===\n",
     "\n",
-    "Prepare data for the analysis. The raw data is downloaded from the FAIR Universe HiggsML challenge repository. Use the HiggsML package to download and process the dataset, followed by selections and saving to local cache.\n",
-    "\n"
+    "Prepare data for the NSBI analysis. \n",
+    "\n",
+    "The ntuples are loaded into `pandas.DataFrame` and saved for NSBI trainings and inference.\n"
    ]
   },
   {
@@ -43,8 +44,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Datasets\n",
-    "--"
+    "**Define branches to load**\n",
+    "\n",
+    "Classified in terms of the number of jets for feature engineering later."
    ]
   },
   {
@@ -78,6 +80,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the Datasets\n",
+    "---\n",
+    "\n",
+    "The `nsbi_common_utils.datasets` library provides a class `datasets`, which is a lightweight helper class for the various utilities related to reading, processing and saving datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -106,7 +118,11 @@
    "metadata": {},
    "source": [
     "Preprocessing\n",
-    "--"
+    "--\n",
+    "\n",
+    "Here we perform some simple feature engineering, particularly focusing on jet variables whose impact on the final likelihood is permutation invariant.\n",
+    "\n",
+    "Kinetmatic features with long tails are also transformed using `log` functions to help the neural network trainings."
    ]
   },
   {
@@ -178,6 +194,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Append the additional branches from engineered features back into the dataset and save back to the original `.root` ntuples defined in the config file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -203,7 +226,15 @@
     "Visualize the data\n",
     "-\n",
     "\n",
-    "Check for low-stats phase space and effect from systematics before moving to the density ratio training."
+    "Check for low-stats phase space and effect from systematics before moving to the density ratio training.\n",
+    "\n",
+    "NSBI workflows need precise estimate of the density ratios as a function of the full kinematic phase space. If regions exist with low-stats they can be filtered out by passing query strings to the `Filter` section of the `Regions` entries. E.g.:\n",
+    "\n",
+    "```\n",
+    "Regions:\n",
+    "-   Name: CR\n",
+    "    Filter: kin_feature_xyz<=100.0\n",
+    "```"
    ]
   },
   {
