Imoroved documentation on NSBI training notebook

--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -8,7 +8,7 @@
     "Train Neural Networks to estimate Likelihood Ratios\n",
     "===\n",
     "\n",
-    "In this notebook we will setup the neural networks that train unbiased and low-variance density ratios to be then used for inference. "
+    "In this notebook we will setup the neural networks that train unbiased and low-variance density ratios to be then used for neural simulation-based inference. "
    ]
   },
   {
@@ -75,6 +75,7 @@
     "importlib.reload(sys.modules['nsbi_common_utils.configuration'])\n",
     "from nsbi_common_utils import configuration\n",
     "\n",
+    "# Load the config file to get metadata like training features\n",
     "config = nsbi_common_utils.configuration.ConfigManager(file_path_string = './config.yml')\n"
    ]
   },
@@ -97,11 +98,11 @@
     "Statistical Model\n",
     "-\n",
     "\n",
-    "The statistical model we have is: \n",
+    "The statistical model for the analysis can be written as: \n",
     "\n",
     "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot p_c\\left(x|\\alpha\\right)$$\n",
     "\n",
-    "where $c$ stands for the various physics channels that contribute to the final state $x$, **$\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model**. Note that we are assuming that the parameter $\\mu$-dependence is known analytically and that we have simulation models for each of the channels $p_c(x)$. \n",
+    "where $c$ stands for the various physics channels that contribute to the final state $x$, **$\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model**. Note that we are assuming that the parameter $\\mu$-dependence is known analytically, given by $f(\\mu)$ and that we have simulation models for each of the channels $p_c(x)$. \n",
     "\n",
     "Setting up the test\n",
     "-\n",
@@ -110,16 +111,18 @@
     "\n",
     "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
     "\n",
-    "A direct approach would then be to model the probability density $p(x|\\mu, \\alpha)$ using NNs. But that is a more difficult task than training probability density ratios. We use a simple trick:\n",
+    "A direct approach would then be to model the probability density $p(x|\\mu, \\alpha)$. This can be done using generative models like Normalizing Flows. \n",
+    "\n",
+    "In the presence of high-dimensional inputs, including discrete inputs like the number of jets, this is a more difficult task than training probability density *ratios*. We rewrite the test statistic to turn this into a density ratio estimation task:\n",
     "\n",
     "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})/p_{ref}(x)}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})/p_{ref}(x)} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
     "\n",
     "\n",
-    "to turn this into a density ratio estimation problem:\n",
+    "Then using the analytical statistical model:\n",
     "\n",
     "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot \\frac{p_c\\left(x|\\alpha\\right)}{p_{ref}(x)}$$\n",
     "\n",
-    "Factorizing out the $\\alpha$-dependence in the density ratios:\n",
+    "Further rewriting of the model, factorizing out the $\\alpha$-dependence gives,\n",
     "\n",
     "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot G_c(\\alpha)\\cdot \\nu_c \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
     "\n",
@@ -190,7 +193,7 @@
     "\n",
     "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} \\right]= \\mu \\cdot \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
     "\n",
-    "The task of estimating the $\\mu-$parameterized density ratio is thus reduced to estimating three $\\mu-$independent density ratios $\\frac{p_{H \\to \\tau\\tau}}{p_{ref}}(x)$, $\\frac{p_{t\\bar{t}}}{p_{ref}}(x)$ and $\\frac{p_{Z \\to \\tau\\tau}}{p_{ref}}(x)$ mixed together with an analytical parameterization (hence the name mixture model).\n",
+    "The task of estimating the $\\mu$-parameterized density ratio is thus reduced to estimating three $\\mu$-independent density ratios $\\frac{p_{H \\to \\tau\\tau}}{p_{ref}}(x)$, $\\frac{p_{t\\bar{t}}}{p_{ref}}(x)$ and $\\frac{p_{Z \\to \\tau\\tau}}{p_{ref}}(x)$ mixed together with an analytical parameterization (hence the name mixture model).\n",
     "\n",
     "**NB**: This is the same as the *morphing-aware* approach of density ratio estimation in MadMiner"
    ]
