Update doc in parameter fitting notebook

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -8,7 +8,7 @@
     "Parameter Fitting\n",
     "===\n",
     "\n",
-    "Having trained the density ratios in the `Neural_Likelihood_Ratio_Estimation.ipynb` notebook, we are ready for the final parameter fitting step of the workflow.\n",
+    "Having trained the density ratios in the `Preselection_withNN.ipynb` notebook, we are ready for the final parameter fitting step of the workflow.\n",
     "\n",
     "We defined Signal Region (SR) and Control Region (CR) channels in the `Neural_Likelihood_Ratio_Estimation.ipynb` notebook, using a preselection NN that isolates signal-rich phase space for the NSBI fitting, with a background-rich phase space used for detailed validations as well as constraining background parameters. We also isolated a Binned Signal Region where the signal cross-section dominated that of the background, for a binned Poisson fit to further boost sensitivity in poorly modeled, but signal-dominant, phase space."
    ]
